--- a/app/templates/timeline/timeline.html
+++ b/app/templates/timeline/timeline.html
@@ -25,28 +25,34 @@
     <!-- Timeline container -->
     <div class="timeline" data-flickity='{"initialIndex": ".initial-focus", "cellAlign": "left", "pageDots": false, "prevNextButtons": false, "contain": true, "resize": false}'>
 
-        <!-- Loop through entries to display timeline items -->
-        {% for entry in entries %}
-            {% set date_class = "" %}
-            {% set initial_focus = "" %}
-            {% if entry.date < today %}
-                {% set date_class = "past" %}
-                {% if loop.index0 == second_to_last_past_index %}
-                    {% set initial_focus = "initial-focus" %}
-                {% endif %}
-            {% elif entry.date == today %}
-                {% set date_class = "highlight" %}
-            {% endif %}
+<!-- Loop through entries to display timeline items -->
+{% for entry in entries %}
+    {% set date_class = "" %}
+    {% set initial_focus = "" %}
+    {% if entry.date < today %}
+        {% set date_class = "past" %}
+        {% if loop.index0 == second_to_last_past_index %}
+            {% set initial_focus = "initial-focus" %}
+        {% endif %}
+    {% elif entry.date == today %}
+        {% set date_class = "highlight" %}
+    {% endif %}
 
-            <!-- Timeline item -->
-            <div class="timeline-item {{ entry.category }} {{ date_class }} {{ initial_focus }}">
-                <span class="date">{{ entry.date|format_date('d. MMMM', locale='de_DE') }}</span>
-                <span class="title">{{ entry.title }}</span>
-                {% if entry.description %}
-                    <span class="description">{{ entry.description }}</span>
-                {% endif %}
-            </div>
-        {% endfor %}
+    <!-- Determine additional classes and styles based on the presence of an image -->
+    {% set img_class = "with-img" if entry.image_filename else "" %}
+    {% set img_style = "background-image: url('" + url_for('uploaded_file', filename=entry.image_filename) + "');" if entry.image_filename else "" %}
+
+    <!-- Timeline item -->
+    <div class="timeline-item {{ entry.category }} {{ date_class }} {{ initial_focus }} {{ img_class }}" style="{{ img_style }}">
+        <span class="date">{{ entry.date|format_date('d. MMMM', locale='de_DE') }}</span>
+        <span class="title">{{ entry.title }}</span>
+        {% if entry.description %}
+            <span class="description">{{ entry.description }}</span>
+        {% endif %}
+    </div>
+{% endfor %}
+
+
 
     </div>
 
