Enhance timeline route, expand JSON output, and improve CI setup
- Extended the timeline route to accept parameters for setting font types, allowing for more flexible and visually appealing timeline presentations.
- Enhanced the JSON output by adding additional parameters to simplify the usage of templates, making it easier to generate custom views.
- Added validation for date inputs to ensure that the data provided is correct and to prevent runtime errors due to invalid formats.
- Refactored the application to improve code readability and maintainability. This restructuring aims to streamline future enhancements and bug fixes.
- Integrated pytest into our GitHub CI actions to automate testing, ensuring that all commits maintain a high standard of quality.
- Configured Dependabot on GitHub to automatically update dependencies, keeping the project secure and up-to-date with the latest libraries and frameworks.

--- a/app/static/timeline/style.css
+++ b/app/static/timeline/style.css
@@ -1,13 +1,16 @@
 html, body {
-    font-family: sans-serif;
+    font-family: sans-serif; /* fallback value */
     height: 100%; /* Essential for percentage heights to work correctly */
     margin: 0;
     padding: 0;
 }
 
+.timeline_with_button {
+  position: relative;
+}
 
 .edit-button {
-    position: fixed;
+    position: absolute;
     top: 20px;
     right: 20px;
     background-color: hotpink;
@@ -57,13 +60,13 @@ html, body {
     animation: fadeInUp 1s ease-out forwards;
 }
 .timeline-item .date {
-  font-size: 8cqh;
+  font-size: 8cqh; /* fallback value */
   position: absolute;
   top: 10px;
   right: 15px;
 }
-.timeline-item .title {font-size: 12cqh; margin-top: 5px;}
-.timeline-item .description {font-size: 10cqh;}
+.timeline-item .title {font-size: 12cqh; margin-top: 5px;} /* fallback value */
+.timeline-item .description {font-size: 10cqh;} /* fallback value */
 .timeline-item.cake { 
     background: linear-gradient(135deg, #FF8A65, #FF7043); /* Warmer and brighter shades of orange */
     background-color: #FF8A65; /* this is used when blending an img */
