--- a/app/templates/timeline/timeline.html
+++ b/app/templates/timeline/timeline.html
@@ -9,61 +9,59 @@
     <!-- Project specific styling -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='timeline/style.css') }}">
 
-    <!-- Inline style to handle dynamic height -->
+    <!-- Inline style to handle dynamic height and font family -->
     <style>
+        html, body {
+            font-family: {{ font_family }}; /* Use the font-family value passed from Flask */
+        }
         .timeline {
             height: {{ timeline_height }}; /* Use the height value passed from Flask */
         }
+        .timeline-item .date {font-size: calc(8cqh * {{ font_scale }});}
+        .timeline-item .title {font-size: calc(12cqh * {{ font_scale }});}
+        .timeline-item .description {font-size: calc(10cqh * {{ font_scale }});}
     </style>
-
 </head>
 <body>
 
-    <!-- Edit button linking to index page -->
-    <a href="{{ url_for('index') }}" target="_blank" class="edit-button">✏️</a>
+    <!-- Timeline with optional edit button -->
+    <div class="timeline_with_button">
+        <a href="{{ url_for('index') }}" target="_blank" class="edit-button">✏️</a>
 
-    <!-- Timeline container -->
-    <div class="timeline" data-flickity='{"initialIndex": ".initial-focus", "cellAlign": "left", "pageDots": false, "prevNextButtons": false, "contain": true, "resize": false}'>
-
-<!-- Loop through entries to display timeline items -->
-{% for entry in entries %}
-    {% set date_class = "" %}
-    {% set initial_focus = "" %}
-    {% if entry.date < today %}
-        {% set date_class = "past" %}
-        {% if loop.index0 == second_to_last_past_index %}
-            {% set initial_focus = "initial-focus" %}
-        {% endif %}
-    {% elif entry.date == today %}
-        {% set date_class = "highlight" %}
-    {% endif %}
-
-    <!-- Determine additional classes and styles based on the presence of an image -->
-    {% set img_class = "with-img" if entry.image_filename else "" %}
-    {% set img_style = "background-image: url('" + url_for('uploaded_file', filename=entry.image_filename) + "');" if entry.image_filename else "" %}
-
-    <!-- Timeline item -->
-    <div class="timeline-item {{ entry.category }} {{ date_class }} {{ initial_focus }} {{ img_class }}" style="{{ img_style }}">
-        <span class="date">{{ entry.date|format_date('d. MMMM', locale='de_DE') }}</span>
-        <span class="title">{{ entry.title }}</span>
-        {% if entry.description %}
-            <span class="description">{{ entry.description }}</span>
-        {% endif %}
-    </div>
-{% endfor %}
-
-
-
+        <!-- Timeline container with Flickity options -->
+        <div class="timeline" data-flickity='{"initialIndex": ".initial-focus", "cellAlign": "left", "pageDots": false, "prevNextButtons": false, "contain": true, "resize": false}'>
+            <!-- Loop through entries to display timeline items -->
+            {% for entry in entries %}
+                {% set date_class = "highlight" if entry.index == 0 else ("past" if entry.index < 0 else "") %}
+                {% set initial_focus = "initial-focus" if entry.index == -2 else "" %}
+                {% set img_class = "with-img" if entry.image_url else "" %}
+                {% set img_style = "background-image: url('" + entry.image_url + "');" if entry.image_url else "" %}
+                <div class="timeline-item {{ entry.category }} {{ date_class }} {{ initial_focus }} {{ img_class }}" style="{{ img_style }}">
+                    <span class="date">{{ entry.date_formatted }}</span>
+                    <span class="title">{{ entry.title }}</span>
+                    {% if entry.description %}
+                        <span class="description">{{ entry.description }}</span>
+                    {% endif %}
+                </div>
+            {% endfor %}
+        </div>
     </div>
 
-    <!-- Demodata for use without a backend -->
-    <!-- <script type="text/javascript" src="insertDemoData.js"></script> -->
+    <!-- Script to conditionally hide the edit button based on url -->
+    <script>
+        function maybeHideEditButton() {
+            var editButton = document.querySelector('.edit-button');
+            var urlParams = new URLSearchParams(window.location.search);
 
-    <!-- Flickity provides timeline functionality -->
+            if (urlParams.has('kiosk')) {
+                editButton.style.display = 'none'; // Hide the edit button
+            } 
+        }
+        maybeHideEditButton();
+    </script>
+
+    <!-- Scripts for Flickity and optional confetti animation -->
     <script type="text/javascript" src="{{ url_for('static', filename='timeline/flickity.pkgd.min.js') }}"></script>
-
-    <!-- Confetti animation for events with css classes birthday and highlight -->
     <script type="text/javascript" src="{{ url_for('static', filename='timeline/confetti.js') }}"></script>
-
 </body>
 </html>
