Fixed highlighting in timeline view and file chooser config

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -23,7 +23,7 @@
         </div>
         Title: <input type="text" name="title" required><br>
         Description: <input type="text" name="description"><br>
-        Image: <input type="file" name="entryImage" accept="image/png, image/jpeg"><br>
+        Image: <input type="file" name="entryImage" accept="image/png, image/jpeg, image/gif"><br>
         <input type="submit" value="Submit">
     </form>
 
