Added export function

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -78,6 +78,10 @@
         <form action="{{ url_for('api_data') }}" method="get">
             <button type="submit">Download JSON Data</button>
         </form>
+        <!-- Button to Export Data as ZIP -->
+        <form action="{{ url_for('export_data') }}" method="get">
+            <button type="submit">Export Data as ZIP</button>
+        </form>
         <!-- Form for removing old entries -->
         <form action="{{ url_for('purge_old_entries') }}" method="post">
             <button type="submit">Remove Old Entries</button>
