Added page title

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Entries</title>
+    <title>Calendarium</title>
     <!-- Linking the stylesheet -->
     <link rel="stylesheet" href="{{ url_for('static', filename='admin/style.css') }}">
     <!-- Including JavaScript file for table sorting -->
