--- a/app/templates/admin/update.html
+++ b/app/templates/admin/update.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Update Entry</title>
+    <title>Calendarium: Update Entry</title>
     <!-- Linking the stylesheet -->
     <link rel="stylesheet" href="{{ url_for('static', filename='admin/style.css') }}">
 </head>
