--- a/app/templates/timeline/timeline.html
+++ b/app/templates/timeline/timeline.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Calendarium: Timeline</title>
 
     <!-- Flickity provides timeline functionality -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='timeline/flickity.css') }}">
