--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript">
         // This is necessary to use the url in the external script.
         var searchGifsUrl = "{{ url_for('search_gifs') }}";
+        var attributionImg = "{{ url_for('static', filename='admin/giphy_attribution.png') }}";
     </script>
 
 </head>
