--- a/app/templates/admin/update.html
+++ b/app/templates/admin/update.html
@@ -9,6 +9,7 @@
     <script type="text/javascript">
         // This is necessary to use the url in the external script.
         var searchGifsUrl = "{{ url_for('search_gifs') }}";
+        var attribution_img = "{{ url_for('static', filename='giphy_attribution.gif') }}";
     </script>
 
 </head>
