--- a/app/templates/admin/update.html
+++ b/app/templates/admin/update.html
@@ -5,6 +5,13 @@
     <title>Calendarium: Update Entry</title>
     <!-- Linking the stylesheet -->
     <link rel="stylesheet" href="{{ url_for('static', filename='admin/style.css') }}">
+
+    <script type="text/javascript">
+        // This is necessary to use the url in the external script.
+        var searchGifsUrl = "{{ url_for('search_gifs') }}";
+        var attribution_img = "{{ url_for('static', filename='giphy_attribution.gif') }}";
+    </script>
+
 </head>
 <body>
     <form class="entry-form" action="{{ url_for('update', id=entry.id) }}" method="post" enctype="multipart/form-data">
@@ -33,6 +40,12 @@
             <label>Image:</label>
             <input type="file" name="entryImage" accept="image/png, image/jpeg, image/gif">
         </div>
+        <div class="form-section">
+            <label>GIF:</label>
+            <input type="text" id="giphySearchInput" placeholder="Search GIFs">
+            <input type="hidden" id="hiddenGiphyUrl" name="giphyUrl">
+            <div id="giphySearchResults"></div>
+        </div>
         <!-- Conditional checkbox for removing the image -->
         {% if entry.image_filename %}
             Current Image: <img src="{{ url_for('uploaded_file', filename=entry.image_filename) }}" alt="Current Image"><br>
@@ -40,5 +53,8 @@
         {% endif %}
         <input type="submit" value="Update Entry" class="submit-button create-button">
     </form>
+
+    <script src="{{ url_for('static', filename='admin/search_gifs.js') }}"></script>
+
 </body>
 </html>
