--- a/app/templates/admin/update.html
+++ b/app/templates/admin/update.html
@@ -40,7 +40,7 @@
             <label>Image:</label>
             <input type="file" name="entryImage" accept="image/png, image/jpeg, image/gif">
         </div>
-        <div class="form-section">
+        <div class="form-section" id="giphySearchSection" style="display: none;"> <!-- Initially hidden -->
             <label>GIF:</label>
             <input type="text" id="giphySearchInput" placeholder="Search GIFs">
             <input type="hidden" id="hiddenGiphyUrl" name="giphyUrl">
