fix: Client-side Giphy downloads

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <form class="entry-form" action="{{ url_for('create') }}" method="post" enctype="multipart/form-data">
+    <form class="entry-form" id="entry-form" action="{{ url_for('create') }}" method="post" enctype="multipart/form-data">
         <div class="form-section">
             <label>Date:</label>
             <input type="date" name="date" required>
@@ -46,7 +46,7 @@
             <input type="hidden" id="hiddenGiphyUrl" name="giphyUrl">
             <div id="giphySearchResults"></div>
         </div>        
-        <input type="submit" value="Create Entry" class="submit-button create-button">
+        <input type="submit" value="Create Entry" class="submit-button create-button" id="submit-button">
     </form>
 
     <!-- Table to display entries -->
